<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    >
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:text="@string/promptSex"
    />
<Spinner android:id="@+id/spnSex"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:drawSelectorOnTop="true"
    android:prompt="@string/spnSexPrompt"
    />
</LinearLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/promptAge"
    />
<EditText android:id="@+id/edtAge"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:inputType="number"
    android:text=""
    />
</LinearLayout>
<Button android:id="@+id/btnDoSug"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/promptBtnDoSug"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    />
<TextView android:id="@+id/txtResult"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/sugResult"
    />
</LinearLayout>
